--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 #--------------------------------------------------------------
 # Simple AWS CodeDeploy Config File
 #
-# Copyleft (c) by Denis Astahov
+# Copyleft (c) by Artur Prudnikov
 #--------------------------------------------------------------
 
 version: 0.0
